사다리 게임 4단계 구현 (#462)
* 설명문 수정

* stream 객체 반환 전 limit 추가

* 생성자에서 List를 Unmodifiable Lists로 변환해서 저장하는 방식으로 변경

* getter 메서드 명을 get 대신 getList로 변경

* null 처리과정 정리

* 메소드 명 정리

* 단위 테스트 추가

* 테스트 케이스 추가

* 테스트 케이스 추가

* System.in의 명시적 close는 필수가 아니므로 제거

* Collection get 할때만 unmodifiable로 변환

* 2-depth 코드 1-depth로 변환
3항 연산자는 1-depth를 차지한다고 본다

* 안내 메시지 추가
사람 입력 값 필터링 후 최종 사람 목록을 출력