@@ -2,7 +2,9 @@ package org.cs.finn.laddergame.domain;
 
 import org.cs.finn.laddergame.util.Checker;
 
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.function.Predicate;
 
@@ -13,7 +15,7 @@ public class Member {
     public static final int MIN = 2;
     public static final int MAX = 10;
     public static final int WIDTH = 5;
-
+    public static final String MSG_ALLOWED_CHAR = "영문 대소문자와 숫자";
     private static final String ALPHA_NUMBER_REGEX = "[a-zA-Z0-9]+";
 
     private final List<String> member;
@@ -31,7 +33,7 @@ public class Member {
             throw new IllegalArgumentException("Valid member value is less then " + MIN + " or greater then " + MAX);
         }
 
-        member = List.of(members);
+        member = Arrays.asList(members);
     }
 
     private String[] splitAndFilterValidMember(final String memberString) {
@@ -40,6 +42,7 @@ public class Member {
                 .filter(Predicate.not(String::isBlank))
                 .filter((s) -> (s.length() <= WIDTH))
                 .filter((s) -> (s.matches(ALPHA_NUMBER_REGEX)))
+                .limit(MAX + 1)
                 .toArray(String[]::new);
     }
 
@@ -47,7 +50,7 @@ public class Member {
         return new Member(String.join(SEPARATOR, DEFAULT_MEMBER.toArray(new String[0])));
     }
 
-    public List<String> getMember() {
-        return member;
+    public List<String> getMemberList() {
+        return Collections.unmodifiableList(member);
     }
 }
